Remove CreateInjector in Autogen library for Boq compliance
PiperOrigin-RevId: 373429616